--- a/config/packages/liip_imagine.yaml
+++ b/config/packages/liip_imagine.yaml
@@ -17,3 +17,14 @@ liip_imagine:
 
                     # crop the input image, if required
                     mode: outbound
+        my_property_detail_thumb:
+            filters:
+
+                # use and setup the "thumbnail" filter
+                thumbnail:
+
+                    # set the thumbnail size to "32x32" pixels
+                    size: [800, 400]
+
+                    # crop the input image, if required
+                    mode: outbound
