--- a/.env
+++ b/.env
@@ -27,6 +27,6 @@ APP_SECRET=72905db6d860f211b42156f8ca904d03
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/new_haya?serverVersion=5.7"
-# DATABASE_URL="postgresql://root:@127.0.0.1:5432/new_haye?serverVersion=13&charset=utf8"
+# DATABASE_URL="mysql://root:@127.0.0.1:3306/new_haya?serverVersion=5.7"
+DATABASE_URL="postgresql://root:@127.0.0.1:5432/new_haya?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
