--- a/.env
+++ b/.env
@@ -22,11 +22,18 @@ APP_SECRET=72905db6d860f211b42156f8ca904d03
 # MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
 
+
+###> Social Network ###
+FACEBOOK_URL="https://www.facebook.com/mansour.abdoulaye/"
+TWITTER_URL=""
+LINKEDIN_URL=""
+###< Social Network ###
+
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://root:@127.0.0.1:3306/new_haya?serverVersion=5.7"
-DATABASE_URL="postgresql://root:@127.0.0.1:5432/new_haya?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/new_haya?serverVersion=5.7"
+# DATABASE_URL="postgresql://root:@127.0.0.1:5432/new_haya?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
