--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "dev-server": "encore dev-server",
         "dev": "encore dev",
         "watch": "encore dev --watch",
-        "build": "encore production --progress"
+        "build": "encore production --progress",
+        "heroku-postbuild": "encore production --progress"
     },
     "dependencies": {
         "@popperjs/core": "^2.9.2",
@@ -29,5 +30,9 @@
         "popper.js": "^1.16.1",
         "tiny-slider": "^2.9.3",
         "wowjs": "^1.1.3"
+    },
+    "engines": {
+        "node": "12.5.0",
+        "npm" : "6.9.0"
     }
 }
