--- a/composer.json
+++ b/composer.json
@@ -89,7 +89,7 @@
         },
         "post-install-cmd": [
             "@auto-scripts",
-            "php bin/console doctrine:schema:update --force"
+            "php bin/console doctrine:migrations:migrate"
         ],
         "post-update-cmd": [
             "@auto-scripts"
