--- a/composer.json
+++ b/composer.json
@@ -88,7 +88,9 @@
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
-            "@auto-scripts",
+            "@auto-scripts" 
+        ],
+        "compile": [
             "php bin/console doctrine:migrations:migrate"
         ],
         "post-update-cmd": [
