--- a/composer.json
+++ b/composer.json
@@ -91,7 +91,7 @@
             "@auto-scripts" 
         ],
         "compile": [
-            "php bin/console doctrine:migrations:migrate"
+            "php bin/console doctrine:schema:update --force"
         ],
         "post-update-cmd": [
             "@auto-scripts"
