Netoyage du dossier assets et ajout du favicon

--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=72905db6d860f211b42156f8ca904d03
 
 
 ###> Social Network ###
-FACEBOOK_URL="https://www.facebook.com/mansour.abdoulaye/"
+FACEBOOK_URL="https://www.facebook.com/Haya-161215982705343"
 TWITTER_URL=""
 LINKEDIN_URL=""
 ###< Social Network ###
