--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,10 @@
         "doctrine/annotations": "^1.0",
         "doctrine/dbal": "^2.13",
         "doctrine/doctrine-bundle": "^2.3",
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.8",
+        "hautelook/alice-bundle": "^2.9",
         "knplabs/knp-paginator-bundle": "^5.4",
         "liip/imagine-bundle": "^2.6",
         "php-flasher/flasher-toastr-symfony": "^0.4.8",
@@ -33,6 +35,7 @@
         "symfony/mime": "5.2.*",
         "symfony/monolog-bundle": "^3.1",
         "symfony/notifier": "5.2.*",
+        "symfony/orm-pack": "^2.1",
         "symfony/process": "5.2.*",
         "symfony/property-access": "5.2.*",
         "symfony/property-info": "5.2.*",
